ProgettoEsempio/build/y.output
Terminals unused in grammar

   OP_EXP
   IF
   THEN
   ELSE
   EXIT
   RETURN
   QUIT
   OP_COMP


Grammar

    0 $accept: LINE $end

    1 LINE: STMT SEMI LINE
    2     | STMT SEMI
    3     | SEMI LINE
    4     | error SEMI LINE

    5 STMT: DECL
    6     | ASSIGN
    7     | MEXPR

    8 DECL: DECL_TYPE ID
    9     | DECL_TYPE ID OP_ASSIGN MEXPR

   10 DECL_TYPE: VAR_TYPE
   11          | CMP_TYPE

   12 MEXPR: MEXPR OP_PLUS MEXPR
   13      | MEXPR OP_MINUS MEXPR
   14      | MEXPR OP_MULT MEXPR
   15      | MEXPR OP_DIV MEXPR
   16      | LP MEXPR RP
   17      | MEXPR OP_I MEXPR
   18      | OP_MINUS MEXPR
   19      | ID
   20      | NUM

   21 ASSIGN: ID OP_ASSIGN MEXPR


Terminals, with rules where they appear

$end (0) 0
error (256) 4
LP (258) 16
RP (259) 16
NUM (260) 20
SEMI (261) 1 2 3 4
OP_ASSIGN (262) 9 21
OP_EXP (263)
IF (264)
THEN (265)
ELSE (266)
ID (267) 8 9 19 21
EXIT (268)
RETURN (269)
QUIT (270)
OP_COMP (271)
VAR_TYPE (272) 10
CMP_TYPE (273) 11
OP_MINUS (274) 13 18
OP_PLUS (275) 12
OP_MULT (276) 14
OP_DIV (277) 15
UMINUS (278)
OP_I (279) 17


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
LINE (26)
    on left: 1 2 3 4, on right: 0 1 3 4
STMT (27)
    on left: 5 6 7, on right: 1 2
DECL (28)
    on left: 8 9, on right: 5
DECL_TYPE (29)
    on left: 10 11, on right: 8 9
MEXPR (30)
    on left: 12 13 14 15 16 17 18 19 20, on right: 7 9 12 13 14 15
    16 17 18 21
ASSIGN (31)
    on left: 21, on right: 6


State 0

    0 $accept: . LINE $end

    error     shift, and go to state 1
    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    SEMI      shift, and go to state 4
    ID        shift, and go to state 5
    VAR_TYPE  shift, and go to state 6
    CMP_TYPE  shift, and go to state 7
    OP_MINUS  shift, and go to state 8

    LINE       go to state 9
    STMT       go to state 10
    DECL       go to state 11
    DECL_TYPE  go to state 12
    MEXPR      go to state 13
    ASSIGN     go to state 14


State 1

    4 LINE: error . SEMI LINE

    SEMI  shift, and go to state 15


State 2

   16 MEXPR: LP . MEXPR RP

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 17


State 3

   20 MEXPR: NUM .

    $default  reduce using rule 20 (MEXPR)


State 4

    3 LINE: SEMI . LINE

    error     shift, and go to state 1
    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    SEMI      shift, and go to state 4
    ID        shift, and go to state 5
    VAR_TYPE  shift, and go to state 6
    CMP_TYPE  shift, and go to state 7
    OP_MINUS  shift, and go to state 8

    LINE       go to state 18
    STMT       go to state 10
    DECL       go to state 11
    DECL_TYPE  go to state 12
    MEXPR      go to state 13
    ASSIGN     go to state 14


State 5

   19 MEXPR: ID .
   21 ASSIGN: ID . OP_ASSIGN MEXPR

    OP_ASSIGN  shift, and go to state 19

    $default  reduce using rule 19 (MEXPR)


State 6

   10 DECL_TYPE: VAR_TYPE .

    $default  reduce using rule 10 (DECL_TYPE)


State 7

   11 DECL_TYPE: CMP_TYPE .

    $default  reduce using rule 11 (DECL_TYPE)


State 8

   18 MEXPR: OP_MINUS . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 20


State 9

    0 $accept: LINE . $end

    $end  shift, and go to state 21


State 10

    1 LINE: STMT . SEMI LINE
    2     | STMT . SEMI

    SEMI  shift, and go to state 22


State 11

    5 STMT: DECL .

    $default  reduce using rule 5 (STMT)


State 12

    8 DECL: DECL_TYPE . ID
    9     | DECL_TYPE . ID OP_ASSIGN MEXPR

    ID  shift, and go to state 23


State 13

    7 STMT: MEXPR .
   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MINUS  shift, and go to state 24
    OP_PLUS   shift, and go to state 25
    OP_MULT   shift, and go to state 26
    OP_DIV    shift, and go to state 27
    OP_I      shift, and go to state 28

    $default  reduce using rule 7 (STMT)


State 14

    6 STMT: ASSIGN .

    $default  reduce using rule 6 (STMT)


State 15

    4 LINE: error SEMI . LINE

    error     shift, and go to state 1
    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    SEMI      shift, and go to state 4
    ID        shift, and go to state 5
    VAR_TYPE  shift, and go to state 6
    CMP_TYPE  shift, and go to state 7
    OP_MINUS  shift, and go to state 8

    LINE       go to state 29
    STMT       go to state 10
    DECL       go to state 11
    DECL_TYPE  go to state 12
    MEXPR      go to state 13
    ASSIGN     go to state 14


State 16

   19 MEXPR: ID .

    $default  reduce using rule 19 (MEXPR)


State 17

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   16      | LP MEXPR . RP
   17      | MEXPR . OP_I MEXPR

    RP        shift, and go to state 30
    OP_MINUS  shift, and go to state 24
    OP_PLUS   shift, and go to state 25
    OP_MULT   shift, and go to state 26
    OP_DIV    shift, and go to state 27
    OP_I      shift, and go to state 28


State 18

    3 LINE: SEMI LINE .

    $default  reduce using rule 3 (LINE)


State 19

   21 ASSIGN: ID OP_ASSIGN . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 31


State 20

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   18      | OP_MINUS MEXPR .

    OP_I  shift, and go to state 28

    $default  reduce using rule 18 (MEXPR)


State 21

    0 $accept: LINE $end .

    $default  accept


State 22

    1 LINE: STMT SEMI . LINE
    2     | STMT SEMI .

    error     shift, and go to state 1
    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    SEMI      shift, and go to state 4
    ID        shift, and go to state 5
    VAR_TYPE  shift, and go to state 6
    CMP_TYPE  shift, and go to state 7
    OP_MINUS  shift, and go to state 8

    $end  reduce using rule 2 (LINE)

    LINE       go to state 32
    STMT       go to state 10
    DECL       go to state 11
    DECL_TYPE  go to state 12
    MEXPR      go to state 13
    ASSIGN     go to state 14


State 23

    8 DECL: DECL_TYPE ID .
    9     | DECL_TYPE ID . OP_ASSIGN MEXPR

    OP_ASSIGN  shift, and go to state 33

    $default  reduce using rule 8 (DECL)


State 24

   13 MEXPR: MEXPR OP_MINUS . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 34


State 25

   12 MEXPR: MEXPR OP_PLUS . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 35


State 26

   14 MEXPR: MEXPR OP_MULT . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 36


State 27

   15 MEXPR: MEXPR OP_DIV . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 37


State 28

   17 MEXPR: MEXPR OP_I . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 38


State 29

    4 LINE: error SEMI LINE .

    $default  reduce using rule 4 (LINE)


State 30

   16 MEXPR: LP MEXPR RP .

    $default  reduce using rule 16 (MEXPR)


State 31

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   21 ASSIGN: ID OP_ASSIGN MEXPR .

    OP_MINUS  shift, and go to state 24
    OP_PLUS   shift, and go to state 25
    OP_MULT   shift, and go to state 26
    OP_DIV    shift, and go to state 27
    OP_I      shift, and go to state 28

    $default  reduce using rule 21 (ASSIGN)


State 32

    1 LINE: STMT SEMI LINE .

    $default  reduce using rule 1 (LINE)


State 33

    9 DECL: DECL_TYPE ID OP_ASSIGN . MEXPR

    LP        shift, and go to state 2
    NUM       shift, and go to state 3
    ID        shift, and go to state 16
    OP_MINUS  shift, and go to state 8

    MEXPR  go to state 39


State 34

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   13      | MEXPR OP_MINUS MEXPR .
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MULT  shift, and go to state 26
    OP_DIV   shift, and go to state 27
    OP_I     shift, and go to state 28

    $default  reduce using rule 13 (MEXPR)


State 35

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   12      | MEXPR OP_PLUS MEXPR .
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MULT  shift, and go to state 26
    OP_DIV   shift, and go to state 27
    OP_I     shift, and go to state 28

    $default  reduce using rule 12 (MEXPR)


State 36

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   14      | MEXPR OP_MULT MEXPR .
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_I  shift, and go to state 28

    $default  reduce using rule 14 (MEXPR)


State 37

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   15      | MEXPR OP_DIV MEXPR .
   17      | MEXPR . OP_I MEXPR

    OP_I  shift, and go to state 28

    $default  reduce using rule 15 (MEXPR)


State 38

   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR
   17      | MEXPR OP_I MEXPR .

    OP_I  shift, and go to state 28

    $default  reduce using rule 17 (MEXPR)


State 39

    9 DECL: DECL_TYPE ID OP_ASSIGN MEXPR .
   12 MEXPR: MEXPR . OP_PLUS MEXPR
   13      | MEXPR . OP_MINUS MEXPR
   14      | MEXPR . OP_MULT MEXPR
   15      | MEXPR . OP_DIV MEXPR
   17      | MEXPR . OP_I MEXPR

    OP_MINUS  shift, and go to state 24
    OP_PLUS   shift, and go to state 25
    OP_MULT   shift, and go to state 26
    OP_DIV    shift, and go to state 27
    OP_I      shift, and go to state 28

    $default  reduce using rule 9 (DECL)
